poc/tests/errors/test_FplVariableAlreadyDeclared_axiom_02.fpl
Test.Namespace
{
    theory
    {
        axiom Test()
        {
            x: Nat
            x: Nat
            true
        }
    }
}

##############################

FplVariableAlreadyDeclared:8:13: The name 'x' was already declared in the current context at (7,13)